@@ -111,40 +111,6 @@ skip_blanks (const char *p)
   return p;
 }
 
-static inline int
-pk_atou (const char **p, uint64_t *number)
-{
-  unsigned long int li;
-  char *end;
-
-  errno = 0;
-  li = strtoull (*p, &end, 0);
-  if ((errno != 0 && li == 0)
-      || end == *p)
-    return 0;
-
-  *number = li;
-  *p = end;
-  return 1;
-}
-
-static inline int
-pk_atoi (const char **p, int64_t *number)
-{
-  long int li;
-  char *end;
-
-  errno = 0;
-  li = strtoll (*p, &end, 0);
-  if ((errno != 0 && li == 0)
-      || end == *p)
-    return 0;
-
-  *number = li;
-  *p = end;
-  return 1;
-}
-
 /* Little implementation of prefix trees, or tries.  This is used in
    order to support calling to commands and subcommands using
    unambiguous prefixes.  It is also a pretty efficient way to decode
